Добавил многопользовательский режим #8
* обновление bd через liquibase

* Добавил логику новых пользователей

* Добавил возможность записывать по 1